syntax = "proto3";

import "stats_response.proto";

package tari.mempool;

// Response type for a received MempoolService requests
message MempoolServiceResponse {
    uint64 request_key = 1;
    oneof response {
        StatsResponse stats = 2;
    }
}

